# multi-object-position-tracker

./: .cproject  .gitignore  .project  .pydevproject  CMakeLists.txt  GperftoolsConfig.cmake  README.md  colors.txt  mainpage.dox  manifest.xml  move_objects.sh
include/position_tracker/: utils.h
launch/: action_nodes.launch  all.launch  arm_navigation.launch  capture_images.launch  load_five_balls.launch  load_objects.launch  load_one_ball.launch  load_track.launch  load_walls.launch  position_body.launch  sensor_nodes.launch
msg/: DetectedDynamicObject.msg  DetectedDynamicObjects.msg  DetectedObjects.msg  InitAction.msg  InitActionFeedback.msg  InitActionGoal.msg  InitActionResult.msg
objects/: ball.model  ball1.model  ball2.model  ball3.model  ball4.model  ball5.model  figure8.dae  horiz_wall.model  perp_wall.model  track.model
rviz_configs/: config.vcg  detected.rviz
scripts/: move_one_ball.sh  move_two_of_five_balls.sh
src/: .gitignore  detect_object.cpp  display_track.cpp  dynamic_object_detector.cpp  find_range.cpp  find_track.cpp  find_track.h  find_track_impl.cpp  find_track_server.cpp  fps_measurer.cpp  init_action.cpp  kalman_simple.cpp  kalman_simple.h  measurement_controller.cpp  move_left_arm_away.cpp  move_right_arm_away.cpp  multi_object_detector.cpp  position_velocity_measurer.cpp  pv.cpp  pv_filter.cpp  pv_filter.h  pv_sir.cpp  random.hpp  simple_pv_filter.cpp  total_force_measurer.cpp
src/position_tracker/msg/: _DetectedDynamicObjects.py  _DetectedObjects.py  _InitAction.py  _InitActionFeedback.py  _InitActionGoal.py  _InitActionResult.py  _InitFeedback.py  _InitGoal.py  _InitResult.py  __init__.py
src/position_tracker/srv/: _FindTrack.py  __init__.py
srv/: FindTrack.srv
